# filedrop

./: .gitignore  Cargo.toml  Dockerfile  README.md  filedrop.py  pyproject.toml  sample.toml
src/: handlers.rs  helpers.rs  main.rs  settings.rs
