[package]
name = "filedrop"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
strip = true

[dependencies]
axum = "0.6.1"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1.23.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
