[tool.poetry]
name = "filedrop"
version = "0.1.0"
description = "File ingest and transfer service."
authors = ["Jon Palmisciano <jp@jonpalmisc.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.1"
pydantic-settings = "^2.0.2"
shortuuid = "^1.0.11"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.23.2"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
